[package]
name = "msp430gen"
version = "0.4.0"
authors = ["Vadzim Dambrouski <pftbest@gmail.com>"]
edition = "2018"

[dependencies]
#ldscript-parser = "0.1"
xmltree = "0.10.0"
svd-encoder = "0.14.1"
svd-parser = "0.14.0"
indexmap = "2.1.0"
Inflector = "0.11.1"
svdtools = "0.3.6"

[build-dependencies]
vergen = { version = "8.2.6", default-features = false, features = [ "git", "gitcl" ] }
