[package]
name = "msp430gen"
version = "0.4.0"
authors = ["Vadzim Dambrouski <pftbest@gmail.com>"]
edition = "2018"

[dependencies]
xmltree = "0.11"
svd-encoder = "0.14.1"
svd-parser = "0.14.0"
indexmap = "2.1.0"
Inflector = "0.11.1"
svdtools = { git = "https://github.com/rust-embedded/svdtools.git", rev = "2732f60029376fe1d4df0ca4d7d1fafef2adca60", version = "0.4" }
eyre = "0.6"

[build-dependencies]
anyhow = "1"
vergen-gitcl = { version = "1", features = [ "build" ] }
vergen-git2 = { version = "1", features = [ "build" ] }
